{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 22,
  "lineage": "ae3d7bd6-59a9-5ab9-b007-880e1ddea83a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa1de1d60de6a97e",
            "arn": "arn:aws:ec2:us-east-1:439579684098:instance/i-04abfedc2fee64cc0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04abfedc2fee64cc0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-085c84cd7513bb3da",
            "private_dns": "ip-172-31-93-73.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.93.73",
            "public_dns": "ec2-18-204-194-253.compute-1.amazonaws.com",
            "public_ip": "18.204.194.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03a2f38c42265c507",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ede10c06b90a2dc0",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ddd59286c754bfb"
            ]
          },
          "dependencies": [
            "data.aws_ami.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:439579684098:security-group/sg-08395e2ac637e9b28",
            "description": "Allow 22, 8080 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08395e2ac637e9b28",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins_sg20230410132547098700000001",
            "name_prefix": "jenkins_sg",
            "owner_id": "439579684098",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09863caea00b16981"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:439579684098:network-acl/acl-0d3f2b35d53685dea",
            "default_network_acl_id": "acl-0d3f2b35d53685dea",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d3f2b35d53685dea",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "439579684098",
            "subnet_ids": [
              "subnet-00c3165779345fb7f",
              "subnet-0480d0e155e413ac1",
              "subnet-07cae43b5d98aa818",
              "subnet-0e3a2d6319b83e1c5"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09863caea00b16981"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:439579684098:route-table/rtb-06a613b58fa3f2ff8",
            "default_route_table_id": "rtb-06a613b58fa3f2ff8",
            "id": "rtb-06a613b58fa3f2ff8",
            "owner_id": "439579684098",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-09863caea00b16981"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:439579684098:security-group/sg-0e691d98a86b07fbf",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e691d98a86b07fbf",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "439579684098",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09863caea00b16981"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0896de7fa453d8dd8",
            "domain": "vpc",
            "id": "eipalloc-0896de7fa453d8dd8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-89-169-94.compute-1.amazonaws.com",
            "public_ip": "3.89.169.94",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:439579684098:internet-gateway/igw-0db9de566d8a8fcd5",
            "id": "igw-0db9de566d8a8fcd5",
            "owner_id": "439579684098",
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09863caea00b16981"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0896de7fa453d8dd8",
            "connectivity_type": "public",
            "id": "nat-0aca2ffa34d694fc3",
            "network_interface_id": "eni-056f93ba1bdc99d33",
            "private_ip": "10.0.101.61",
            "public_ip": "3.89.169.94",
            "subnet_id": "subnet-00c3165779345fb7f",
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc-jenkins.aws_eip.nat",
            "module.vpc-jenkins.aws_internet_gateway.this",
            "module.vpc-jenkins.aws_subnet.public",
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c2ff0ca539e6ebb21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0aca2ffa34d694fc3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c2ff0ca539e6ebb2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-jenkins.aws_eip.nat",
            "module.vpc-jenkins.aws_internet_gateway.this",
            "module.vpc-jenkins.aws_nat_gateway.this",
            "module.vpc-jenkins.aws_route_table.private",
            "module.vpc-jenkins.aws_subnet.public",
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0db9de566d8a8fcd5",
            "id": "r-rtb-0382433b215e396b71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0382433b215e396b7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-jenkins.aws_internet_gateway.this",
            "module.vpc-jenkins.aws_route_table.public",
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:439579684098:route-table/rtb-0c2ff0ca539e6ebb2",
            "id": "rtb-0c2ff0ca539e6ebb2",
            "owner_id": "439579684098",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09863caea00b16981"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:439579684098:route-table/rtb-0382433b215e396b7",
            "id": "rtb-0382433b215e396b7",
            "owner_id": "439579684098",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09863caea00b16981"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6c71439e7f03278",
            "route_table_id": "rtb-0c2ff0ca539e6ebb2",
            "subnet_id": "subnet-07cae43b5d98aa818"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_route_table.private",
            "module.vpc-jenkins.aws_subnet.private",
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023407d607ef9b1e8",
            "route_table_id": "rtb-0c2ff0ca539e6ebb2",
            "subnet_id": "subnet-0e3a2d6319b83e1c5"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_route_table.private",
            "module.vpc-jenkins.aws_subnet.private",
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0684740175fc2ebfc",
            "route_table_id": "rtb-0382433b215e396b7",
            "subnet_id": "subnet-00c3165779345fb7f"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_route_table.public",
            "module.vpc-jenkins.aws_subnet.public",
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7c3babbe6b3c00a",
            "route_table_id": "rtb-0382433b215e396b7",
            "subnet_id": "subnet-0480d0e155e413ac1"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_route_table.public",
            "module.vpc-jenkins.aws_subnet.public",
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:439579684098:subnet/subnet-07cae43b5d98aa818",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cae43b5d98aa818",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "439579684098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09863caea00b16981"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:439579684098:subnet/subnet-0e3a2d6319b83e1c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3a2d6319b83e1c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "439579684098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09863caea00b16981"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:439579684098:subnet/subnet-00c3165779345fb7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c3165779345fb7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "439579684098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09863caea00b16981"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:439579684098:subnet/subnet-0480d0e155e413ac1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0480d0e155e413ac1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "439579684098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09863caea00b16981"
          },
          "dependencies": [
            "module.vpc-jenkins.aws_vpc.this",
            "module.vpc-jenkins.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-jenkins",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:439579684098:vpc/vpc-09863caea00b16981",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d3f2b35d53685dea",
            "default_route_table_id": "rtb-06a613b58fa3f2ff8",
            "default_security_group_id": "sg-0e691d98a86b07fbf",
            "dhcp_options_id": "dopt-07f27bd49cb2a04f2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09863caea00b16981",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a613b58fa3f2ff8",
            "owner_id": "439579684098",
            "tags": {
              "Environment": "dev",
              "Name": "var.vpc_name",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "var.vpc_name",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}